# rose

./: .gitignore  Cargo.toml  Makefile
src/: lib.rs  vga.rs
src/arch/x86_64/: mod.rs  segment.rs
src/arch/x86_64/boot/: boot.asm  long.asm  multiboot_header.asm
src/arch/x86_64/boot/grub/: grub.cfg
src/arch/x86_64/idt/: entry.rs  mod.rs
targets/: x86_64-unknown-rose.json
