[package]
name = "rose"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = { version = "0.10.0", features = ["lazy", "rwlock"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
